# undistort

./: CMakeLists.txt  README.md
include/: deviceType.h  undistort.h
src/: deviceType.cpp  main.cpp  undistort.cpp
test/: test.cpp
